[package]

name = "screenshot"
version = "0.0.5"
authors = ["Alex <alexchandel@gmail.com>"]
description = "Get a bitmap image of any display."
keywords = ["graphics", "image", "gui", "scripting"]
repository = "https://github.com/alexchandel/screenshot-rs"
readme = "README.md"
license = "Unlicense"

[target.x86_64-unknown-linux-gnu.dependencies.xlib]
path = "rust-xlib"
[target.i686-unknown-linux-gnu.dependencies.xlib]
path = "rust-xlib"

[dev-dependencies.bmp]
bmp = "0.0.5"
[dev-dependencies.image]
image = "*"
